<resources>
    <string name="app_name">Filho na Escola</string>

    <!-- A -->
    <string name="ajuda">Ajuda</string>
    <string name="atividade">Atividade</string>

    <!-- C -->
    <string name="cadastro">Cadastro</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="celular">Celular</string>
    <string name="confirmacao">Confirmação</string>
    <string name="configurar">Configurar</string>
    <string name="close">Close</string>

    <!-- D -->
    <string name="diaria">Diária</string>
    <string name="data_nascimento">Data de Nascimento</string>

    <!-- E -->
    <string name="enviar">Enviar</string>
    <string name="escola">Escola</string>

    <!-- I -->
    <string name="inicio">Início</string>

    <!-- L -->
    <string name="limpar_cache">Limpar Cache</string>

    <!-- M -->
    <string name="mensal">Mensal</string>
    <string name="meu_cadastro">Meu Cadastro</string>
    <string name="mensagem">Mensagem</string>
    <string name="mensagens">Mensagens</string>

    <!-- N -->
    <string name="nome_completo">Nome Completo</string>
    <string name="network_not_available">Internet indisponível</string>

    <!-- O -->
    <string name="open">Open</string>

    <!-- P -->
    <string name="professor">Professor</string>

    <!-- R -->
    <string name="reenviar">Reenviar a mensagem</string>

    <!-- S -->
    <string name="semanal">Semanal</string>
    <string name="sair">Sair da conta</string>

    <!-- MSG -->
    <string name="msg_cadastro">Por favor, digite seus dados abaixo para completar seu cadastro</string>
    <string name="msg_nome_completo">Digite aqui seu nome completo</string>
    <string name="msg_aguarde">Aguarde enquanto confirmamos seu número.</string>
    <string name="msg_ou_digite">Ou digite o código recebido por SMS abaixo:</string>
    <string name="msg_liberar_permissao">É necessario que você libere as permissões</string>
    <string name="msg_erro_cadastro">Ocorreu um erro ao verificar seu dispositivo efetue o cadastro novamente.</string>
    <string name="msg_nao_mensagens">Não há mensagens</string>
    <string name="msg_nao_alunos">Não há alunos cadastrados para você</string>

    <!-- MSG Validacao -->
    <string name="msg_val_nome">Campo de nome completo em branco</string>
    <string name="msg_val_data">Campo de data de nascimento em branco</string>
    <string name="msg_val_ddd">Campo de DDD em branco</string>
    <string name="msg_val_telefone">Campo de telefone em branco</string>
    <string name="msg_val_campo_obrigatorio">Campo Obrigatório</string>

    <string name="action_settings">Settings</string>
</resources>
