<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cinza_fundo"
    android:padding="20dp"
    tools:context="br.com.wasys.filhoescola.activity.CadastroActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:background="@color/branco"
        android:orientation="vertical">
        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:text="@string/msg_cadastro"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/branco"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome_completo"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edt_nome_completo"
                android:hint="@string/msg_nome_completo"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/branco"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_nascimento"/>
            <br.com.wasys.library.widget.edittext.DateTextEdit
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:id="@+id/edt_data_nascimento"
                android:hint="dd/mm/aaaa"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/branco"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/celular"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <br.com.wasys.library.widget.edittext.DDDTextEdit
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edt_ddd"
                    android:inputType="phone"
                    android:layout_weight="3"
                    android:hint="DD"/>

                <br.com.wasys.library.widget.edittext.PhoneTextEdit
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edt_numero"
                    android:inputType="phone"
                    android:layout_weight="1"
                    android:hint="99999-9999"/>

            </LinearLayout>

        </LinearLayout>



    </LinearLayout>

    <Button
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviar"
        android:textColor="@color/branco"
        android:id="@+id/btn_enviar"/>

</LinearLayout>
