<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@color/cinza_fundo"
    tools:context="br.com.wasys.filhoescola.activity.AguardeSMSActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_aguarde"

        android:textAlignment="center"
        android:textSize="19sp"/>

    <ImageView
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@mipmap/ico_clock" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_ou_digite"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:textSize="19sp"/>

    <LinearLayout
        android:background="@color/branco"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="1"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="30sp"
            android:id="@+id/edt_digito_1"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="1"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="30sp"
            android:id="@+id/edt_digito_2"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="1"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="30sp"
            android:id="@+id/edt_digito_3"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="1"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="30sp"
            android:id="@+id/edt_digito_4"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="1"
            android:textAlignment="center"
            android:textSize="30sp"
            android:inputType="number"
            android:id="@+id/edt_digito_5"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="1"
            android:textAlignment="center"
            android:textSize="30sp"
            android:inputType="number"
            android:id="@+id/edt_digito_6"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:textColor="@color/branco"
        android:id="@+id/btn_cadastrar"
        android:background="@color/colorPrimary"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reenviar"
        android:textColor="@color/colorPrimary"
        android:id="@+id/btn_reenviar"
        android:background="@color/cinza_fundo"/>

</LinearLayout>
